# QRAAT

./: .gitignore  CMakeLists.txt  README  README.md  TODO  build-gnuradio  build-rmg  build_qraat  install-rmg  rmg  rmg_vars.sh
Machine Learning/: Class_setNum.py  NBC_trainer.py  README.md  README.txt  SVM_trainer.py  SupportVectorMachine_trainer.py  classifier_evaluation.py  classifier_evaluation2.py  classifier_evaluation_NBC.py  classifier_evaluation_SVM.py  classifier_evaluation_bandwidthFilter.py  classifier_evaluation_decisionTree.py  classifier_evaluation_estScoreFilter.py  classifier_evaluation_modifiedBC.py  classifier_evaluation_randomForests.py  decisionTree_trainer.py  evaluation_results.py  randomForests_trainer.py  schema.txt
analysis/: covarianceAnalysis.py  ellipse21.py
apps/: 4channel_spectrum  4channel_spectrum_client  4channel_spectrum_server  CMakeLists.txt  active_rmg  est_processing  probe_rmg  process_det.py  read_det  run_rmg  run_rmg_alt  tx_setup
base/: CMakeLists.txt  setup.py
base/include/: CMakeLists.txt  pulse_data.h  rmg_api.h
base/lib/: CMakeLists.txt  pulse_data.cc
base/python/: CMakeLists.txt  __init__.py  afsk.py  continuous_covariance.py  csv.py  det.py  error.py  est.py  pulse_data.i  pulse_data.py  pulse_data_wrap.cpp  setup.py  util.py
base/scripts/: CMakeLists.txt  rmg_env  rmg_template  t
base/scripts/proc/: CMakeLists.txt  rmg_csv  rmg_powerswitch
base/serv/: CMakeLists.txt
base/serv/proc/: CMakeLists.txt  rmg-node  rmg_backup  rmg_csv  rmg_det_to_db  rmg_fetch  rmg_powerswitch
batmon/: batmon  batplot  cron.sh
doc/: Makefile  README  conf.py  data.rst  doxygen.cfg  index.rst  misc.rst  pulse_detector.rst  qraat-doc.tex  qraat.rst  rmg.rst
etc/: authfile  crontab_server  rmg_logrotate  sitelist.csv
include/: CMakeLists.txt  accumulator.h  circ_buffer.h  detectmod_detect.h  peak_detect.h  pulse_data.h  qa_rmg.h  rmg_api.h
lib/: CMakeLists.txt  accumulator.cc  circ_buffer.cc  detectmod_detect.cc  peak_detect.cc  pulse_data.cc  qa_rmg.cc  test_all.cc
node/: CMakeLists.txt  rmg-node  rmg_runretry
node/swig/: CMakeLists.txt  rmg_swig.i
normalization/: README.md  (+5 more)
qraat-base/: CMakeLists.txt  setup.py
qraat-base/include/: CMakeLists.txt  pulse_data.h
qraat-base/lib/: CMakeLists.txt  pulse_data.cc
qraat-base/python/: CMakeLists.txt  det.py
qraat-base/serv/proc/: CMakeLists.txt  rmg_zapflags
qraat-base/swig/: CMakeLists.txt  pulse_data.i
serv/: CMakeLists.txt  est_processing  guy.py  node  rmg  rmg-node  rmg_backup  rmg_clean  rmg_csv  rmg_dbstats  rmg_det_to_db  rmg_det_to_est  rmg_detcount  rmg_env  rmg_estcount  rmg_fetch  rmg_fetch.py  rmg_import_est  rmg_plotstatus  rmg_powerswitch  rmg_powerswitch.sh  rmg_process  rmg_readest  rmg_readestfile  rmg_readstatus  rmg_runretry  rmg_schedule  rmg_sitelist  rmg_sitelist.py  rmg_status  rmg_template  rmg_timecheck  sitelist
serv/cal/: rmg_insert_gps
serv/calibration/: rmg_insert_gps  rmg_steering_vector  rmg_true_position  steering_vector.py  true_position.py
serv/filter/: CMakeLists.txt  changes.py  plot_relscore.py  registry.py  rmg_filter  rmg_filter_auto  rmg_position  rmg_template  rmg_time  window.py
serv/pos/: CMakeLists.txt  manual_position_estimation.py  plot_bearing.py  plot_likelihoods.py  plot_ll.py  plot_pdist.py  plot_search_space.py  rmg_position  rmg_position_auto  rmg_position_lib.py  run.py  stat_pos.py  test.py
serv/position/: manual_position_estimation.py  position_est  rmg_position
serv/proc/: rmg  rmg_backup  rmg_clean  rmg_csv  rmg_det_to_db  rmg_filterest  rmg_process  rmg_runretry  rmg_schedule  rmg_txlist
serv/processing/: CMakeLists.txt  rmg_backup  rmg_clean  rmg_csv  rmg_filterest
serv/telemetry/: CMakeLists.txt  rmg_plotstatus  rmg_readstatus  rmg_timecheck
serv/track/: CMakeLists.txt  rmg_track_auto
serv/visualize/: plot_ll.py  plot_pos.py  plot_search_space.py  plot_track.py  test.py
server/: CMakeLists.txt  get_track.py  setup.py
server/etc/: authfile  crontab_server  db_schema.sql  reset_processing_cursors.sql  rmg_logrotate  sitelist.csv
server/python/: CMakeLists.txt  __init__.py  elevation.py  est.py  fella.py  gps.py  gvm.py  position.py  position1.py  position_covariance.py  signal.py  signal1.py  signal_filter.py  sim-boot.py  sim.py  test.py  track.py  util.py  validate.py
server/scripts/: CMakeLists.txt  rmg_dbcheck  rmg_import_est  rmg_template
server/scripts/cal/: CMakeLists.txt  rmg_insert_gps  rmg_model_fitting  rmg_signal_averaging  rmg_steering_vector  rmg_true_position
server/scripts/cal/models/: nec_pattern.csv  smooth_phase.csv  smooth_phase2.csv
server/scripts/filter/: CMakeLists.txt  plot_relscore.py  plot_score_error.py  rmg_filter  rmg_filter2_auto  rmg_filter_auto  rmg_sitefilter_auto  score_error.py
server/scripts/filter/partition/: README  a.py  b.py  site3.csv  site4.csv
server/scripts/filter/test-data/: README  a.py  b.py  c.py  evaluate.py  plot_score_error.py  plotscore.py  postscore.py  prescore.py  score_error.py  site1.csv  site2.csv  site3-rough.csv  site5.csv  site8.csv  test-data.csv
server/scripts/gps_afsk/: CMakeLists.txt  rmg_afsk_to_db
server/scripts/pos/: CMakeLists.txt  manual_position_estimation.py  rmg_position  rmg_position_auto  stat_pos.py
server/scripts/proc/: CMakeLists.txt  rmg  rmg_backup  rmg_clean  rmg_dbarchive  rmg_dbexport.pl  rmg_det_to_db  rmg_fetch  rmg_filterest  rmg_insert_into_db  rmg_movebankExport.py  rmg_process  rmg_repdb  rmg_reprocess_quarantine  rmg_reptable  rmg_schedule  rmg_trackDataQuery.py  rmg_txlist
server/scripts/telemetry/: CMakeLists.txt  rmg_dbstats  rmg_detcount  rmg_estcount  rmg_plotstatus  rmg_readstatus  rmg_status  rmg_timecheck
server/scripts/track/: rmg_track  rmg_track_auto
server/scripts/visualize/: CMakeLists.txt  plot_ll.py  plot_pos.py  plot_score.py  plot_search_space.py  plot_track.py  test.py
server/serv/pos/: manual_position_estimation.py
server/serv/proc/: CMakeLists.txt
server/serv/track/: rmg_track
server/serv/visualize/: CMakeLists.txt  plot_search_space.py
(+538 files in other folders)
