INSTALL(PROGRAMS  
  rmg_det_to_db
  rmg
  rmg-node
  rmg_env
  rmg_runretry
  rmg_csv
  rmg_fetch
  rmg_powerswitch
  rmg_readstatus
  rmg_plotstatus
  rmg_status
  rmg_timecheck
  rmg_schedule
  rmg_detcount
  rmg_estcount
  rmg_dbstats
  rmg_status
  rmg_filterest
  rmg_backup
  rmg_clean
  DESTINATION bin)


